2019-05-05  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfdoc.c: g option affects only annotations created by
	"pdf:bann/eann" and html "a link" specials.
	Report from Joseph Wright:
	https://tug.org/pipermail/tex-live/2019-May/043612.html

2019-05-03  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* specials.c: transformation applied to current point was not
	done properly.

2019-05-03  Akira Kakuto  <kakuto@w32tex.org>

	* dpxfile.c, mfileio.h, pdfximage.c: Support non-ascii file
	names in default code page of OS irrespective of values of a
	variable 'command_line_encoding' (Windows only).

2019-05-03  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfobj.c, pdfobj.h: Add support for ASCIIHex and ASCII85
	decode filter. Support for decoding stream data with multiple
	filters applied. Remove unused function.
	* tt_cmap.c, tt_gsub.[ch]: Revise ToUnicode CMap creation for
	OpenType. Use GSUB for mapping unencoded glyphs to Unicode
	(XeTeX support), lowering priority of CJK compatibility
	ideographs.
	* configure.ac: Version 20190503.

2019-04-07  Karl Berry  <karl@freefriends.org>

	* TeX Live 2019.

2019-04-01  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfencoding.c: Fix a bug that dvipdfmx wrongly tries to
	create ToUnicode CMap even when there is no valid mapping
	entry. It just results in "Invalid CMap" warning.

2019-03-30  Akira Kakuto  <kakuto@w32tex.org>

	* spc_xtx.c: "ap->curptr" was copied to "buffer" without
	length validation. Fix this security problem.
	* spc_pdfm.c: "ap->curptr" was copied to "buffer" without
	length validation. Fix this security problem.
	* specials.c: Error message was written using vsprintf(),
	which has no length limitation. Use vsnprintf() instead.

	Report from Andy Nguyen of ETH Zurich.

2019-03-05  Clerk Ma  <maqiyuan130324@vip.qq.com>

	* tt_table.c: Fix 'null character(s)' warning caused by
	fonts like Roboto (Android) or YuMincho (Windows 10).
